# zortex.nvim

./: .gitignore  Example.zortex  LICENSE  README.md  diff  flake.nix  grammar.js  module.nix  package.json  release.sh  tsconfig.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
app/: cli.js  index.js  install.cmd  install.sh  local.js  next.config.js  nvim.js  package.json  package.json.old  remote.js  tsconfig.json  tsconfig.tsbuildinfo  tslint.json
deployment/: .env.example  .terraform.lock.hcl  Dockerfile  Makefile  README.md  crontab  docker-compose.yml  entrypoint.sh  main.tf  notification_sender.py  run.sh  (+7 more)
tree-sitter-zortex/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar-old.js  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-zortex/bindings/c/: tree-sitter-zortex.h  tree-sitter-zortex.pc.in
tree-sitter-zortex/bindings/go/: binding.go  binding_test.go
tree-sitter-zortex/bindings/node/: binding.cc  index.js
tree-sitter-zortex/bindings/python/tests/: test_binding.py
tree-sitter-zortex/bindings/python/tree_sitter_zortex/: __init__.py  binding.c
tree-sitter-zortex/bindings/rust/: build.rs  lib.rs
tree-sitter-zortex/bindings/swift/TreeSitterZortexTests/: TreeSitterZortexTests.swift
tree-sitter-zortex/examples/: test1.zortex
tree-sitter-zortex/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-zortex/test/corpus/: basic.txt  example_tests.zortex
(+385 files in other folders)
